--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -2,11 +2,10 @@ root: true
 parser: '@typescript-eslint/parser'
 plugins:
         - '@typescript-eslint'
-        - 'jest'
 extends:
-        - 'eslint:recommended'
-        - 'plugin:@typescript-eslint/recommended'
-        - 'prettier'
+        - eslint:recommended
+        - plugin:@typescript-eslint/recommended
+        - prettier
         - plugin:import/recommended
         - plugin:import/typescript
 rules:
