--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "pre-commit": "npm run lint && npm run test:coverage",
     "prepare": "git config core.hookspath .githooks"
   },
-  "keywords": ["zod", "fixtures"],
+  "keywords": [
+    "zod",
+    "fixtures"
+  ],
   "author": "Tim Deschryver",
   "license": "MIT",
   "devDependencies": {
@@ -19,7 +22,6 @@
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.6.0",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4",
     "vitest": "^0.18.0",
