--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "pre-commit": "npm run lint && npm run test:coverage",
     "prepare": "git config core.hookspath .githooks"
   },
+  "type": "module",
   "keywords": [
     "zod",
     "fixtures"
