ci: add release step

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,14 +1,16 @@
 root: true
 parser: '@typescript-eslint/parser'
+ignorePatterns: ['dist']
 plugins:
-        - '@typescript-eslint'
+  - '@typescript-eslint'
 extends:
-        - eslint:recommended
-        - plugin:@typescript-eslint/recommended
-        - prettier
-        - plugin:import/recommended
-        - plugin:import/typescript
+  - eslint:recommended
+  - plugin:@typescript-eslint/recommended
+  - prettier
+  - plugin:import/recommended
+  - plugin:import/typescript
 rules:
-        sort-imports: 'error'
-        '@typescript-eslint/consistent-type-imports': [ 'error', { prefer: 'type-imports' } ]
-        '@typescript-eslint/explicit-function-return-type': 'error'
+  sort-imports: 'error'
+  '@typescript-eslint/consistent-type-imports':
+    ['error', { prefer: 'type-imports' }]
+  '@typescript-eslint/explicit-function-return-type': 'error'
