--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,3 +26,34 @@ jobs:
         run: npm run lint
       - name: 🧪 Test
         run: npm run test:coverage
+
+  release:
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: 📖 Check out repo
+        uses: actions/checkout@v3
+      - name: ⚙️ Set up Node
+        uses: actions/setup-node@v3
+      - name: 🔎 Install dependencies
+        run: npm ci
+      - name: 🏗️ Build
+        run: npm run build
+      - name: 🚀 Release
+        uses: cycjimmy/semantic-release-action@v3
+        with:
+          semantic_version: 16
+          dry_run: true
+          branches: |
+            [
+              'placeholder-branch',
+              {
+                name: 'main',
+                prerelease: true
+              }
+            ]
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
