--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
-		"c8": "^7.13.0",
+		"@vitest/coverage-c8": "^0.30.1",
 		"eslint": "^8.39.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-import": "^2.27.5",
