--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Creating fixtures based on zod schemas",
 	"scripts": {
 		"start": "vite",
-		"test": "vitest",
+		"test": "vitest --ui",
 		"test:coverage": "vitest run --coverage",
 		"build": "vite build",
 		"lint": "eslint . --max-warnings 0",
@@ -33,17 +33,21 @@
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.30.7",
 		"@typescript-eslint/parser": "^5.30.7",
+		"@vitest/ui": "^0.31.0",
 		"c8": "^7.12.0",
 		"eslint": "^8.20.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
 		"prettier": "^2.7.1",
-		"typescript": "^4.7.4",
-		"vite": "^3.0.4",
+		"typescript": "^5.0.4",
+		"vite": "^3.2.6",
 		"vite-plugin-dts": "^1.4.1",
-		"vitest": "^0.18.0"
+		"vitest": "^0.31.0"
 	},
 	"dependencies": {
 		"zod": "^3.21.4"
+	},
+	"imports": {
+		"@/*": "./src/*"
 	}
 }
