--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
 	"author": "Tim Deschryver",
 	"license": "MIT",
 	"dependencies": {
-		"zod": "^3.21.4",
+		"@paralleldrive/cuid2": "^2.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
 		"@vitest/coverage-c8": "^0.30.1",
+		"cuid": "^3.0.0",
 		"eslint": "^8.39.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-import": "^2.27.5",
@@ -44,8 +45,7 @@
 		"vite": "^4.3.3",
 		"vite-plugin-dts": "^2.3.0",
 		"vitest": "^0.30.1",
-		"@paralleldrive/cuid2": "^2.2.0",
-		"cuid": "^3.0.0"
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.30.7",
