--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - 'main'
+      - 'beta'
   pull_request: {}
 
 concurrency:
@@ -31,7 +32,7 @@ jobs:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     needs: test
-    if: github.ref == 'refs/heads/main'
+    if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/beta' }}
     steps:
       - name: 📖 Check out repo
         uses: actions/checkout@v3
@@ -47,7 +48,11 @@ jobs:
           semantic_version: 16
           branches: |
             [
-              'main'
+              'main',
+              {
+                  name: 'beta',
+                  prerelease: true
+              }
             ]
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
