fix: fix ci and run all tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "resolveJsonModule": true,
     "outDir": "./dist",
     "declaration": true,
+    "importHelpers": true,
     "inlineSourceMap": true,
     "baseUrl": "./src",
     "paths": {
