--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
 		"test:coverage": "vitest run --coverage",
 		"build": "vite build",
 		"lint": "eslint . --max-warnings 0",
-		"pre-commit": "npm run lint && npm run test:coverage",
 		"prepare": "git config core.hookspath .githooks"
 	},
 	"files": [
@@ -38,11 +37,12 @@
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.59.11",
 		"@typescript-eslint/parser": "^5.59.11",
-		"@vitest/ui": "^0.31.0",
 		"@vitest/coverage-c8": "^0.30.1",
+		"@vitest/ui": "^0.31.0",
 		"c8": "^7.12.0",
 		"eslint": "^8.42.0",
 		"eslint-config-prettier": "^8.8.0",
+		"lint-staged": "^13.2.2",
 		"prettier": "^2.8.8",
 		"typescript": "^5.0.4",
 		"vite": "^3.2.6",
