--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
 		"zod": ">=3.0.0"
 	},
 	"dependencies": {
-		"@paralleldrive/cuid2": "^2.2.0",
-		"zod": "^3.21.4"
+		"@paralleldrive/cuid2": "^2.2.0"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.59.11",
@@ -50,7 +49,8 @@
 		"typescript": "^5.0.4",
 		"vite": "^3.2.6",
 		"vite-plugin-dts": "^1.4.1",
-		"vitest": "^0.31.0"
+		"vitest": "^0.31.0",
+		"zod": "^3.21.4"
 	},
 	"imports": {
 		"@/*": "./src/*"
