--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"test:coverage": "vitest run --coverage",
 		"build": "vite build",
 		"lint": "eslint . --max-warnings 0",
-		"prepare": "git config core.hookspath .githooks"
+		"prepare": "husky install"
 	},
 	"files": [
 		"dist"
@@ -47,7 +47,8 @@
 		"typescript": "^5.0.4",
 		"vite": "^3.2.6",
 		"vite-plugin-dts": "^1.4.1",
-		"vitest": "^0.31.0"
+		"vitest": "^0.31.0",
+		"husky": "^8.0.0"
 	},
 	"imports": {
 		"@/*": "./src/*"
