--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"test": "vitest --ui",
 		"test:coverage": "vitest run --coverage",
 		"build": "vite build",
-		"lint": "eslint . --max-warnings 0",
+		"lint": "tsc --noEmit && eslint . --max-warnings 0",
 		"prepare": "husky install"
 	},
 	"files": [
@@ -42,13 +42,12 @@
 		"c8": "^7.12.0",
 		"eslint": "^8.42.0",
 		"eslint-config-prettier": "^8.8.0",
-		"lint-staged": "^13.2.2",
+		"husky": "^8.0.0",
 		"prettier": "^2.8.8",
 		"typescript": "^5.0.4",
 		"vite": "^3.2.6",
 		"vite-plugin-dts": "^1.4.1",
-		"vitest": "^0.31.0",
-		"husky": "^8.0.0"
+		"vitest": "^0.31.0"
 	},
 	"imports": {
 		"@/*": "./src/*"
