update vite specific config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,11 @@
 		"declaration": true,
 		"importHelpers": true,
 		"inlineSourceMap": true,
+		"typeRoots": ["./src/types", "./node_modules", "./node_modules/@types/"],
+		"noEmit": true,
+		"isolatedModules": true, // https://vitejs.dev/guide/features.html#isolatedmodules
+		"useDefineForClassFields": true, // https://vitejs.dev/guide/features.html#usedefineforclassfields
+		"types": ["vite/client"], // https://vitejs.dev/guide/features.html#client-types
 		"baseUrl": "./src",
 		"paths": {
 			"@/*": ["*"]
