--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"$schema": "https://json.schemastore.org/package",
 	"name": "zod-fixture",
 	"version": "0.0.0",
 	"description": "Creating fixtures based on zod schemas",
@@ -18,7 +19,8 @@
 	"exports": {
 		".": {
 			"import": "./dist/zod-fixture.es.js",
-			"require": "./dist/zod-fixture.umd.cjs"
+			"require": "./dist/zod-fixture.umd.cjs",
+			"types": "./dist/index.d.ts"
 		}
 	},
 	"types": "./dist/index.d.ts",
