fix: string test

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,8 @@ jobs:
         run: npm run lint
       - name: 🧪 Test
         run: npm run test:coverage
+        env:
+          SATISFY_ITERATIONS: 1000
 
   release:
     timeout-minutes: 5
