--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,8 @@ jobs:
         run: npm run test:coverage
         env:
           SATISFY_ITERATIONS: 1000
-
+      - name: 📔 Docs
+        run: npm run docs:build
   release:
     timeout-minutes: 5
     runs-on: ubuntu-latest
