--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,12 +29,26 @@ jobs:
         run: npm run test:coverage
         env:
           SATISFY_ITERATIONS: 1000
+
+  docs:
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📖 Check out repo
+        uses: actions/checkout@v3
+      - name: ⚙️ Set up Node
+        uses: actions/setup-node@v3
+      - name: 🔎 Install dependencies
+        run: npm ci
+      - name: Verify updated README
+        run: npx embedme README.md --verify
       - name: 📔 Docs
         run: npm run docs:build
+
   release:
     timeout-minutes: 5
     runs-on: ubuntu-latest
-    needs: test
+    needs: [test, docs]
     if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/beta' }}
     steps:
       - name: 📖 Check out repo
