--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,8 +40,10 @@ jobs:
         uses: actions/setup-node@v3
       - name: 🔎 Install dependencies
         run: npm ci
-      - name: Verify updated README
-        run: npx embedme README.md --verify
+      - name: Generate README
+        run: readme:generate
+      - name: Check README up to date
+        run: readme:check
       - name: 📔 Docs
         run: npm run docs:build
 
