--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
 	},
 	"dependencies": {
 		"@paralleldrive/cuid2": "^2.2.0",
-		"ulid": "^2.3.0"
+		"ulid": "^2.3.0",
+		"randexp": "^0.5.3"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.59.11",
