--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
 		"zod": ">=3.0.0"
 	},
 	"dependencies": {
-		"@paralleldrive/cuid2": "^2.2.0"
+		"@paralleldrive/cuid2": "^2.2.0",
+		"ulid": "^2.3.0"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.59.11",
