--- a/package.json
+++ b/package.json
@@ -43,26 +43,26 @@
 		"zod": ">=3.0.0"
 	},
 	"dependencies": {
-		"@paralleldrive/cuid2": "^2.2.0",
-		"ulid": "^2.3.0",
-		"randexp": "^0.5.3"
+		"@paralleldrive/cuid2": "^2.2.1",
+		"randexp": "^0.5.3",
+		"ulid": "^2.3.0"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^5.59.11",
-		"@typescript-eslint/parser": "^5.59.11",
+		"@typescript-eslint/eslint-plugin": "^5.62.0",
+		"@typescript-eslint/parser": "^5.62.0",
 		"@vitest/coverage-c8": "^0.30.1",
-		"@vitest/ui": "^0.31.0",
-		"c8": "^7.12.0",
-		"eslint": "^8.42.0",
+		"@vitest/ui": "^0.31.4",
+		"c8": "^7.14.0",
+		"eslint": "^8.45.0",
 		"eslint-config-prettier": "^8.8.0",
-		"lint-staged": "^13.2.2",
+		"lint-staged": "^13.2.3",
 		"minimist": "^1.2.8",
 		"prettier": "^2.8.8",
-		"typescript": "^5.0.4",
-		"vite": "^3.2.6",
-		"vite-plugin-dts": "^1.4.1",
+		"typescript": "^5.1.6",
+		"vite": "^4.4.4",
+		"vite-plugin-dts": "^1.7.3",
 		"vitepress": "^1.0.0-beta.3",
-		"vitest": "^0.31.0",
+		"vitest": "^0.31.4",
 		"zod": "^3.21.4"
 	},
 	"imports": {
