fix: seeds for cuid, cuid2, and ulid

--- a/package.json
+++ b/package.json
@@ -43,9 +43,7 @@
 		"zod": ">=3.0.0"
 	},
 	"dependencies": {
-		"@paralleldrive/cuid2": "^2.2.1",
-		"randexp": "^0.5.3",
-		"ulid": "^2.3.0"
+		"randexp": "^0.5.3"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
