--- a/package.json
+++ b/package.json
@@ -58,9 +58,8 @@
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^6.7.5",
 		"@typescript-eslint/parser": "^6.7.5",
-		"@vitest/coverage-c8": "^0.33.0",
+		"@vitest/coverage-v8": "^0.34.6",
 		"@vitest/ui": "^0.34.6",
-		"c8": "^8.0.1",
 		"eslint": "^8.51.0",
 		"eslint-config-prettier": "^9.0.0",
 		"lint-staged": "^14.0.1",
