--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
 	"editor.codeActionsOnSave": {
-		"source.organizeImports": true,
-		"source.fixAll.eslint": true
+		"source.organizeImports": "explicit",
+		"source.fixAll.eslint": "explicit"
 	}
 }
