--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
 	"name": "zod-fixture",
 	"version": "0.0.0",
 	"description": "Creating fixtures based on zod schemas",
-	"packageManager": "npm@9.9.0",
+	"packageManager": "npm@10.2.5",
 	"scripts": {
-		"start": "vite -c vite.lib.config.ts",
-		"test": "vitest run -c vite.lib.config.ts",
-		"test:watch": "vitest -c vite.lib.config.ts",
-		"test:ui": "vitest -c vite.lib.config.ts --ui",
-		"test:coverage": "vitest run --coverage -c vite.lib.config.ts",
-		"build": "vite build -c vite.lib.config.ts",
+		"start": "vite -c vite.lib.config.mts",
+		"test": "vitest run -c vite.lib.config.mts",
+		"test:watch": "vitest -c vite.lib.config.mts",
+		"test:ui": "vitest -c vite.lib.config.mts --ui",
+		"test:coverage": "vitest run --coverage -c vite.lib.config.mts",
+		"build": "vite build -c vite.lib.config.mts",
 		"lint": "eslint . --max-warnings 0",
 		"prepare": "git config core.hookspath .githooks",
 		"docs:dev": "vitepress dev docs",
@@ -58,20 +58,20 @@
 		"randexp": "^0.5.3"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^6.7.5",
-		"@typescript-eslint/parser": "^6.7.5",
-		"@vitest/coverage-v8": "^0.34.6",
-		"@vitest/ui": "^0.34.6",
-		"eslint": "^8.51.0",
-		"eslint-config-prettier": "^9.0.0",
-		"lint-staged": "^14.0.1",
+		"@typescript-eslint/eslint-plugin": "^6.17.0",
+		"@typescript-eslint/parser": "^6.17.0",
+		"@vitest/coverage-v8": "^1.1.1",
+		"@vitest/ui": "^1.1.1",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"lint-staged": "^15.2.0",
 		"minimist": "^1.2.8",
-		"prettier": "^3.0.3",
-		"typescript": "^5.2.2",
-		"vite": "^4.4.11",
-		"vite-plugin-dts": "^3.6.0",
-		"vitepress": "^1.0.0-rc.21",
-		"vitest": "^0.34.6",
+		"prettier": "^3.1.1",
+		"typescript": "^5.3.3",
+		"vite": "^5.0.10",
+		"vite-plugin-dts": "^3.7.0",
+		"vitepress": "^1.0.0-rc.34",
+		"vitest": "^1.1.1",
 		"zod": "^3.22.4"
 	},
 	"imports": {
